feat: autenticación JWT con cookies HttpOnly s - access/refresh tokens separados, rotación, 4 endpoints (registro/login/refresh/logout)